# pushworld

./: .cursorignore  .gitignore
benchmark/: pyproject.toml
benchmark/puzzles/level0/all/test/: level_0_all_test_0.pwp  level_0_all_test_1.pwp  level_0_all_test_10.pwp  level_0_all_test_100.pwp  level_0_all_test_101.pwp  level_0_all_test_102.pwp  level_0_all_test_103.pwp  level_0_all_test_104.pwp  level_0_all_test_105.pwp  level_0_all_test_106.pwp  level_0_all_test_107.pwp  level_0_all_test_108.pwp  level_0_all_test_109.pwp  level_0_all_test_11.pwp  level_0_all_test_110.pwp  level_0_all_test_111.pwp  level_0_all_test_112.pwp  level_0_all_test_113.pwp  level_0_all_test_114.pwp  level_0_all_test_115.pwp  level_0_all_test_116.pwp  level_0_all_test_117.pwp  level_0_all_test_118.pwp  level_0_all_test_119.pwp  level_0_all_test_12.pwp  level_0_all_test_120.pwp  level_0_all_test_121.pwp  level_0_all_test_122.pwp  level_0_all_test_123.pwp  level_0_all_test_124.pwp  level_0_all_test_125.pwp  level_0_all_test_126.pwp  level_0_all_test_128.pwp  level_0_all_test_129.pwp  level_0_all_test_13.pwp  level_0_all_test_130.pwp  level_0_all_test_132.pwp  level_0_all_test_133.pwp  level_0_all_test_134.pwp  level_0_all_test_135.pwp  (+155 more)
benchmark/puzzles/level0/all/train/: level_0_all_train_0.pwp  level_0_all_train_1.pwp  level_0_all_train_10.pwp  level_0_all_train_100.pwp  level_0_all_train_1000.pwp  level_0_all_train_1001.pwp  level_0_all_train_1002.pwp  level_0_all_train_1003.pwp  level_0_all_train_1004.pwp  level_0_all_train_1005.pwp  level_0_all_train_1006.pwp  level_0_all_train_1007.pwp  (+1988 more)
(+27800 files in other folders)
