[project]
name = "benchmark"
version = "0.1.0"
description = ""
authors = [
    {name = "Kim Young Jin",email = "kimyoungjin1001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [
    {include = "puzzles", from = "benchmark"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
